# PongSFML

./: .gitignore  CMakeLists.txt  ClientPong.cpp  SFMLPong.cpp  SFMLPong.h  ServerPong.cpp  ball.cpp  ball.h  button.cpp  button.h  circle.h  collider.h  defs.h  game_screen.cpp  game_screen.h  menu_screen.cpp  menu_screen.h  movable.h  paddle.cpp  paddle.h  pong_server.cpp  pong_test_client.cpp  scene.h  scoreboard.h  screen.h  solid_object.h  utils.h
Net/: game_client.cpp  game_client.h  game_packet.h  game_server.cpp  game_server.h  net.h
cmake/: file_macros.cmake  macro_copy_assets.cmake
